# SpeechTransformerTraining

./: README.md  main.py  pyproject.toml
tests/: __init__.py  conftest.py  test_memory_estimator.py
